--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,11 @@ yarn-debug.log*
 yarn-error.log*
 
 .vercel
+
+# IDE - VSCode
+.vscode/*
+.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
